Fix overflow x

--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 100vw;
   height: 98vh;
   padding: 0.2em;
   background: linear-gradient(rgba(60, 83, 83, 0.8), rgba(60, 83, 83, 0.8)),
