--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -15,7 +15,7 @@
       padding: 0.8rem;
       display: flex;
       font-size: 2em;
-      margin-right: 1.8rem;
+      margin: 0 0.9rem;
       text-decoration: none;
       color: $color-font;
       font-weight: bolder;
@@ -35,7 +35,6 @@
     flex-direction: column;
     align-items: center;
     line-height: 6em;
-    width: 100vw;
     height: 100vh;
     background-image: linear-gradient(190deg, #2bb6b6 0%, #3a5555 100%);
     &--image {
